<resources>
    <string name="app_name">Warung Bakso Mbah Welo</string>

    <!--Label-->
    <string name="nama_toko">Warung Bakso Mbah Welo</string>
    <string name="label_id">1</string>
    <string name="label_yes">Iya</string>
    <string name="label_no">Tidak</string>
    <string name="label_total">Total</string>
    <string name="label_total_harga">Total Harga</string>
    <string name="label_old_password">Password Lama</string>
    <string name="label_new_password">Password Baru</string>
    <string name="label_confirm_password">Konfirmasi Password</string>
    <string name="label_username_login">Masukkan Username Anda</string>
    <string name="label_password_login">Masukkan Password Anda</string>
    <string name="label_list_kosong">Tidak ada data disini</string>
    <string name="label_list_kosong_detail">Tidak ada data detail</string>
    <string name="label_scan_barcode">Scan Barcode Meja Anda</string>
    <string name="label_data_tidak_ditemukan">Data Tidak Ditemukan</string>
    <string name="label_berhasil_download">Data berhasil didownload di</string>

    <string name="label_data_tidak_boleh_kosong">Password tidak boleh kosong</string>
    <string name="label_data_kosong">Data tidak boleh kosong</string>
    <string name="press_once_again">Tekan Sekali Lagi Untuk Keluar</string>
    <string name="label_data_melampaui">Data yang anda masukkan melampaui dari yang ditentukan</string>
    <string name="label_data_hanya_satu">Hanya 1 Pemasok yang bisa anda tambahkan</string>
    <string name="label_data_sama">Data yang anda masukkan tidak boleh sama dengan sebelumnya</string>
    <string name="label_data_generate">Generate QR Code Terlebih Dahulu</string>

    <string name="label_input_password_baru_salah">Password Baru anda tidak sama</string>
    <string name="label_input_kosong">Input tidak boleh kosong</string>
    <string name="label_gambar_kosong">Gambar tidak boleh kosong</string>
    <string name="label_jumlah_makanan">Jumlah Makanan tidak boleh kurang dari 1</string>

    <!--Dialog-->
    <string name="confirmation_dialog_password">Anda Yakin Ingin Mengganti Password?</string>
    <string name="confirmation_dialog_finish_order">Anda Yakin Ingin Menyelesaikan Pesanan?</string>
    <string name="confirmation_dialog_logout">Anda Yakin Ingin Keluar?</string>
    <string name="confirmation_dialog_download">Anda Yakin Ingin Mendownload Data Ini?</string>
    <string name="confirmation_dialog_submit">Anda Yakin Ingin Kirim Data ini?</string>
    <string name="confirmation_dialog_delete">Anda Yakin Ingin Menghapus Data ini?</string>
    <string name="confirmation_dialog_edit_status">Anda Yakin Ingin Mengubah Status Pesanan Menjadi</string>
    <string name="confirmation_dialog_add">Anda Yakin Ingin Menambahkan Data ini ?</string>

    <!--Title Menu Bar-->
    <string name="menu_admin">Admin</string>
    <string name="menu_detail_pesanan">Detail Penjualan</string>
    <string name="menu_detail_kategori">Detail Kategori</string>
    <string name="menu_tambah_kategori">Tambah Kategori</string>
    <string name="menu_ubah_kategori">Ubah Kategori</string>
    <string name="menu_detail_pengguna">Detail Pengguna</string>
    <string name="menu_ubah_pengguna">Ubah Pengguna</string>
    <string name="menu_tambah_pengguna">Tambah Pengguna</string>
    <string name="menu_detail_bahan_pokok">Detail Bahan Pokok</string>
    <string name="menu_tambah_bahan_pokok">Tambah Bahan Pokok</string>
    <string name="menu_tambah_pemasok">Tambah Pemasok</string>
    <string name="menu_tambah_detail_bahan_pokok">Tambah Bahan Pokok Detail</string>
    <string name="menu_detail_makanan">Detail Makanan</string>
    <string name="menu_tambah_makanan">Tambah Makanan</string>
    <string name="menu_ubah_makanan">Ubah Makanan</string>
    <string name="menu_detail_meja">Detail Meja</string>
    <string name="menu_tambah_meja">Tambah Meja</string>
    <string name="menu_ubah_meja">Ubah Meja</string>
    <string name="menu_daftar_resi">Daftar Resi</string>
    <string name="menu_detail_resi">Detail Resi</string>
    <string name="menu_detail">Detail Menu</string>
    <string name="menu_cart">Keranjang Pesanan</string>
    <string name="menu_status">Status Pesanan</string>

    <!--Menu-->
    <string name="menu_penjualan">Data Penjualan</string>
    <string name="menu_kategori">Data Kategori</string>
    <string name="menu_makanan">Data Makanan</string>
    <string name="menu_pengguna">Data Pengguna</string>
    <string name="menu_bahan_pokok">Data Bahan Pokok</string>
    <string name="menu_meja">Data Meja</string>
    <string name="menu_password">Ubah Password</string>
    <string name="menu_resi">Data Resi</string>
    <string name="menu_pengunjung">Daftar Menu</string>

    <!--Tombol-->
    <string name="tombol_tambah">Tambah</string>
    <string name="tombol_hapus">Hapus</string>
    <string name="tombol_hapus_cart">Hapus Keranjang</string>
    <string name="tombol_ubah">Ubah</string>
    <string name="tombol_pengunjung">Masuk Sebagai Pengunjung</string>
    <string name="tombol_admin">Masuk Sebagai Admin</string>
    <string name="tombol_login">Masuk</string>
    <string name="tombol_selesai_pesanan">Selesai Pesanan</string>
    <string name="tombol_tambah_pesanan">Tambah</string>
    <string name="tombol_keluar">Keluar</string>
    <string name="tombol_kirim">Kirim</string>
    <string name="tombol_generate">Generate QR Code</string>
    <string name="tombol_tambah_detail">Tambah Detil</string>
    <string name="tombol_tambah_pemasok">Tambah Pemasok</string>
    <string name="tombol_tambah_makanan">Tambah Gambar</string>
    <string name="tombol_tambah_bahan_pokok">Tambah Bahan Pokok</string>
    <string name="tombol_cari_resi">Cari Resi</string>
    <string name="tombol_download_resi">Download Resi</string>
    <string name="tombol_history">Daftar Riwayat</string>
    <string name="tombol_notification">Daftar Pesanan</string>

    <!--Data Penjualan-->
    <string name="label_nomor_penjualan">Nomor Penjualan</string>
    <string name="label_value_id_penjualan">1</string>
    <string name="label_value_nama_penjualan">Catatan</string>
    <string name="label_value_status_penjualan">Status Penjualan</string>
    <string name="label_value_total_harga_penjualan">1</string>
    <string name="label_value_tanggal_penjualan">01 January 2020</string>
    <string name="label_value_catatan_penjualan">Catatan</string>

    <!--Data Kategori-->
    <string name="label_id_kategori">Id Kategori</string>
    <string name="label_nama_kategori">Nama Kategori</string>
    <string name="label_nama_makanan_kategori">Nama Makanan</string>
    <string name="label_value_id_kategori">1</string>
    <string name="label_value_nama_kategori">Nama Kategori</string>
    <string name="label_value_nama_makanan_kategori">Nama Makanan</string>

    <!--Data Makanan-->
    <string name="label_nama_makanan">Nama Makanan</string>
    <string name="label_harga_makanan">Harga Makanan</string>
    <string name="label_gambar_makanan">Gambar Makanan</string>
    <string name="label_value_jumlah_makanan">Jumlah Bahan Pokok</string>
    <string name="label_value_nama_makanan">Nama</string>
    <string name="label_value_harga_makanan">1</string>
    <string name="label_value_nama_makanan_bahan_pokok">Nama Bahan Pokok</string>
    <string name="label_value_nama">Nama</string>
    <string name="label_value_jumlah">Jumlah</string>
    <string name="label_value_satuan">Satuan</string>

    <!--Data Pengguna-->
    <string name="label_nama_pengguna">Nama</string>
    <string name="label_username_pengguna">Username</string>
    <string name="label_email_pengguna">Email</string>
    <string name="label_nomor_telepon_pengguna">Nomor Telepon</string>
    <string name="label_tanggal_lahir_pengguna">Tanggal Lahir</string>
    <string name="label_value_nama_pengguna">Nama Pengguna</string>
    <string name="label_value_username_pengguna">Username Pengguna</string>

    <!--Data Meja-->
    <string name="label_id_meja">ID Meja</string>
    <string name="label_nama_meja">Nama Meja</string>
    <string name="label_value_id_meja">1</string>
    <string name="label_value_nama_meja">Nama Meja</string>

    <!--Data Bahan Pokok-->
    <string name="label_nama_bahan_pokok">Nama</string>
    <string name="label_jumlah_bahan_pokok_satuan">Jumlah</string>
    <string name="label_harga_bahan_pokok">Harga</string>
    <string name="label_satuan_bahan_pokok">Satuan</string>
    <string name="label_status_bahan_pokok">Status</string>
    <string name="label_pemasok_bahan_pokok">Pemasok Bahan Pokok</string>
    <string name="label_value_nama_bahan_pokok">Nama Bahan Pokok</string>
    <string name="label_value_jumlah_bahan_pokok">1</string>
    <string name="label_value_status_bahan_pokok">Status</string>
    <string name="label_value_nama_tokok_detail_bahan_pokok">Toko Bahan Pokok</string>
    <string name="label_value_harga_detail_bahan_pokok">1</string>
    <string name="label_value_tanggal_detail_bahan_pokok">01 - 01 - 2001</string>
    <string name="label_value_nama_pemasok_bahan_pokok">Nama Pemasok</string>
    <string name="label_nama_pemasok">Nama Pemasok</string>
    <string name="label_alamat_pemasok">Alamat Pemasok</string>
    <string name="label_nomor_telepon_pemasok">Nomor Telepon Pemasok</string>

    <!--Data Resi-->
    <string name="label_tanggal_dari_resi">Dari Tanggal</string>
    <string name="label_tanggal_sampai_resi">Sampai Tanggal</string>

    <!--Data Pengunjung-->
    <string name="label_value_nama_meja_pengunjung">Nama Meja</string>
</resources>
