<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ll_item"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvValueNamaMakananBahanPokok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_value_nama"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/tvValueJumlahMakananBahanPokok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_value_jumlah"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/tvValueSatuanMakananBahanPokok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_value_satuan"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnTambahMakananBahanPokok"
            android:background="@drawable/button_danger"
            android:text="@string/tombol_hapus"
            android:textColor="@drawable/button_danger_text"
            android:layout_gravity="center_vertical"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/_8dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"/>
</LinearLayout>