<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvIdDetailPenjualan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Title"
                android:padding="@dimen/_4dp"
                android:text="@string/label_value_id_penjualan"/>

            <TextView
                android:id="@+id/tvTanggalDetailPenjualan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Caption"
                android:padding="@dimen/_4dp"
                android:text="@string/label_value_tanggal_penjualan"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_8dp">

            <TextView
                android:id="@+id/tvStatusDetailPenjualan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_value_status_penjualan"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                android:layout_margin="@dimen/_8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spnDroplistStatus"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    style="@style/Widget.AppCompat.Spinner.DropDown"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDataPenjualanDetail"
            android:layout_width="match_parent"
            android:layout_height="350dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8dp"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvLabelTotalHargaPenjualan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/TextAppearance.AppCompat.Title"
            android:padding="@dimen/_4dp"
            android:text="@string/label_total" />
        <TextView
            android:id="@+id/tvTotalHargaDetailPenjualan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/TextAppearance.AppCompat.Title"
            android:padding="@dimen/_4dp"
            android:text="@string/label_value_total_harga_penjualan"
            android:textAlignment="textEnd"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_8dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnSelesaiPesanan"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:background="@drawable/button_primary"
            android:text="@string/tombol_selesai_pesanan"
            android:textColor="@drawable/button_primary_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="@dimen/_12dp"/>
    </LinearLayout>
</LinearLayout>