<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorIcons">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDataPengunjungKeranjang"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:elevation="3dp"
        android:padding="@dimen/card_view_margin"
        android:layout_margin="@dimen/_4dp"
        card_view:cardCornerRadius="@dimen/card_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvJumlahDetailPengunjung"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/label_id"
                    android:textSize="@dimen/text_large"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/button_primary"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNamaDetailPengunjung"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:padding="@dimen/_8dp"
                    android:text="@string/label_value_nama_penjualan" />

                <TextView
                    android:id="@+id/tvCatatanDetailPengunjung"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:padding="@dimen/_8dp"
                    android:text="@string/label_value_catatan_penjualan" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:gravity="end">

                <Button
                    android:id="@+id/btnHapusKeranjang"
                    android:background="@drawable/button_danger"
                    android:text="@string/tombol_hapus"
                    android:textColor="@drawable/button_danger_text"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/_8dp"
                    android:layout_marginVertical="@dimen/_8dp"/>
                <TextView
                    android:id="@+id/tvTotalHargaDetailPengunjung"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:padding="@dimen/_8dp"
                    android:text="@string/label_value_total_harga_penjualan"
                    android:gravity="end"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>