<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".Screens.Pengguna.PenggunaDetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDataMakananDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="3dp"
        android:padding="@dimen/card_view_margin"
        android:layout_margin="@dimen/activity_horizontal_margin"
        card_view:cardCornerRadius="@dimen/card_radius" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="@dimen/_12dp"
                android:layout_marginHorizontal="@dimen/_8dp">

                <TextView
                    android:id="@+id/tvNamaMakanan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:padding="@dimen/_4dp"
                    android:text="@string/label_nama_makanan"/>

                <TextView
                    android:id="@+id/tvValueNamaMakanan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:padding="@dimen/_4dp"
                    android:text="@string/label_value_nama_makanan"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="@dimen/_12dp"
                android:layout_marginHorizontal="@dimen/_8dp">

                <TextView
                    android:id="@+id/tvHargaMakanan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:padding="@dimen/_4dp"
                    android:text="@string/label_harga_makanan"/>

                <TextView
                    android:id="@+id/tvValueHargaMakanan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:padding="@dimen/_4dp"
                    android:text="@string/label_value_harga_makanan"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginVertical="@dimen/_12dp"
                android:layout_marginHorizontal="@dimen/_8dp">

                <ImageView
                    android:id="@+id/ivGambarMakanan"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_logo"
                    android:scaleType="fitXY"
                    android:background="@color/colorPrimary"
                    android:layout_margin="@dimen/_8dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_8dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnHapusMakanan"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:background="@drawable/button_danger"
            android:text="@string/tombol_hapus"
            android:textColor="@drawable/button_danger_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="@dimen/_12dp"/>

        <Button
            android:id="@+id/btnUbahMakanan"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:background="@drawable/button_secondary"
            android:text="@string/tombol_ubah"
            android:textColor="@drawable/button_secondary_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="@dimen/_12dp"/>
    </LinearLayout>
</LinearLayout>